10-sg/main.tf
module "ingress_alb" {
    
    source = "git::https://github.com/harshatejaadduri/terraform-sg.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = "ingress-alb"
    sg_description = "for ingress alb"
    vpc_id = local.vpc_id
}

module "bastion" {
    #source = "../../terraform-aws-securitygroup"
    source = "git::https://github.com/harshatejaadduri/terraform-sg.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = "bastion sg"
    sg_description = "for bastion sg"
    vpc_id = local.vpc_id
}

module "vpn" {
    #source = "../../terraform-aws-securitygroup"
    source = "git::https://github.com/harshatejaadduri/terraform-sg.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = "vpn"
    sg_description = "for vpn"
    vpc_id = local.vpc_id
}

module "eks_control_plane" {
    #source = "../../terraform-aws-securitygroup"
    source = "git::https://github.com/harshatejaadduri/terraform-sg.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = "eks_control_plane"
    sg_description = "for eks_control_plane"
    vpc_id = local.vpc_id
}

module "eks_node" {
    #source = "../../terraform-aws-securitygroup"
    source = "git::https://github.com/harshatejaadduri/terraform-sg.git?ref=main"
    project = var.project
    environment = var.environment

    sg_name = "eks_node"
    sg_description = "for eks_node"
    vpc_id = local.vpc_id
}

resource "aws_security_group_rule" "ingress_alb_https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = module.ingress_alb.sg_id
}

resource "aws_security_group_rule" "bastion_laptop" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = module.bastion.sg_id
}



resource "aws_security_group_rule" "eks_control_plane_eks_node" {
  type              = "ingress"
  from_port        = 0
  to_port          = 0
  protocol         = "-1"
  source_security_group_id = module.eks_node.sg_id
  security_group_id = module.eks_control_plane.sg_id
}

resource "aws_security_group_rule" "eks_node_eks_control_plane" {
  type              = "ingress"
  from_port        = 0
  to_port          = 0
  protocol         = "-1"
  source_security_group_id = module.eks_control_plane.sg_id
  security_group_id = module.eks_node.sg_id
}

resource "aws_security_group_rule" "eks_control_plane_bastion" {
  type              = "ingress"
  from_port        = 443
  to_port          = 443
  protocol         = "tcp"
  source_security_group_id = module.bastion.sg_id
  security_group_id = module.eks_control_plane.sg_id
}

resource "aws_security_group_rule" "eks_node_bastion" {
  type              = "ingress"
  from_port        = 22
  to_port          = 22
  protocol         = "tcp"
  source_security_group_id = module.bastion.sg_id
  security_group_id = module.eks_node.sg_id
}

resource "aws_security_group_rule" "ingress_eks_node" {
  type              = "ingress"
  from_port        = 443
  to_port          = 443
  protocol         = "tcp"
  source_security_group_id = module.ingress_alb.sg_id
  security_group_id = module.eks_node.sg_id
  
}

resource "aws_security_group_rule" "eks_node_ingress" {
  type              = "ingress"
  from_port        = 443
  to_port          = 443
  protocol         = "tcp"
  source_security_group_id = module.eks_node.sg_id
  security_group_id = module.ingress_alb.sg_id
  
}
